# AgenticMeter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  behavior_demo.py  behavior_test.py  level01_demo.py  pyproject.toml  react_agent.py  research_agent.py  smoke_test.py
agenticmeter/: .gitignore  __init__.py  cli.py  context.py  cost.py  decorators.py  redact.py  server.py  span.py  tracer.py
agenticmeter/analysis/: insights.py
agenticmeter/instrument/: anthropic.py  langchain.py  openai.py
agenticmeter/sinks/: base.py  sqlite.py
